oblig2patch/src/tests/oblig2/errors/type1_fail.cmp
program type1_fail
begin

    proc main()
    begin
        var tmp : bool
    in 
        tmp := 42 /* Error, can't assign int to bool */
    end

end